# texture_packer

./: .gitignore  .travis.yml  Cargo.dot  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  packer-test.rs
src/: buffer2d.rs  color.rs  frame.rs  guillotine_packer.rs  image_buffer.rs  lib.rs  main.rs  maxrect_packer.rs  multi_texture_packer.rs  packer.rs  rect.rs  shelf_packer.rs  skyline_packer.rs  texture_packer.rs  texture_packer_config.rs
src/exporter/: image_exporter.rs  mod.rs
src/importer/: image_importer.rs  mod.rs
src/packer/: guillotine_packer.rs  maxrect_packer.rs  mod.rs  shelf_packer.rs  skyline_packer.rs
src/texture/: image_texture.rs  memory_rgba8_texture.rs  mod.rs  sub_texture.rs
