[package]
name = "texture_packer"
version = "0.8.0"
authors = ["Coeuvre <coeuvre@gmail.com>"]
keywords = ["texture", "packer", "piston"]
description = "A texture packing library using the skyline heuristic"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/texture_packer.git"
homepage = "https://github.com/PistonDevelopers/texture_packer"
documentation = "http://docs.piston.rs/texture_packer"

[dependencies]
image = "0.10.0"
