[package]
name = "texture_packer"
version = "0.16.0"
authors = ["Coeuvre <coeuvre@gmail.com>"]
keywords = ["texture", "packer", "piston"]
description = "A texture packing library using the skyline heuristic"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/texture_packer.git"
homepage = "https://github.com/PistonDevelopers/texture_packer"
documentation = "http://docs.piston.rs/texture_packer"

[features]
gif_codec = ["image/gif_codec"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png_codec = ["image/png_codec"]
pnm = ["image/pnm"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
bmp = ["image/bmp"]
hdr = ["image/hdr"]

[dependencies]
image = { version = "0.21.0", default-features = false }
